Fixed gap on large devices

--- a/style2.css
+++ b/style2.css
@@ -48,55 +48,17 @@ body {
     height: 150px;
 }
 
-@media (min-width: 768px) {
-.num {
-    font-size: 100px;
-}
-}
-
-@media (max-width: 767px) {
-.num {
-    font-size: 50px;
-}
+@media only screen and (min-width: 1200px) {
+    .nevimuz {
+        gap: 100px;
+    }
 }
 
-@media (max-width: 480px) {
-.num {
-    font-size: 30px;
+@media only screen and (min-width: 992px) {
 }
+@media only screen and (min-width: 768px) {
 }
-
-@media (min-width: 768px) {
-.text {
-    font-size: 35px;
+@media only screen and (min-width: 600px) {
 }
-}
-
-@media (max-width: 767px) {
-.text {
-    font-size: 20px;
-}
-}
-
-@media (max-width: 480px) {
-.text {
-    font-size: 15px;
-}
-}
-
-@media (min-width: 768px) {
-body {
-    padding-top: 75px;
-}
-}
-
-h1 {
-padding-top: 10px;
-}
-
-@media (min-width: 768px) {
-h1 {
-    margin-bottom: 75px;
-    font-size: 100px;
-}
+@media only screen and (max-width: 600px) {
 }
